--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+.row{
+  margin: 0;
+}
+.container-fluid{
+  margin: 0;
+  padding: 0;
+}
+
 .navbar{
   height: 60px;
   padding-right: 5%;
@@ -15,7 +23,6 @@
   text-transform: uppercase;
   opacity: 1;
 }
-
 .nav-link{
   color: #003577 !important ;
   font-weight: 600;
@@ -25,12 +32,12 @@
   text-decoration: underline;
   font-size: 105%;
 }
+
 .banner{
 	background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("../src/banner.png");
   background-size: cover;
   background-position: center center;
   background-position-y: -350px;
-  height: 537px;
 }
 .banner-text{
 	padding:100px 0 150px 0;
@@ -80,6 +87,15 @@
   color: #000000DE;
   text-transform: uppercase;
 }
+@media (max-width: 768px) {
+  .banner{
+    background-repeat: no-repeat;
+    background-position-y: 0;
+  }
+  .banner-heading{
+  	font-size: 2.5rem;
+  }
+}
 
 .missao{
   background: #F5F5F5;
@@ -87,8 +103,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 5%;
 }
-
 .titulo-missao{
   color: #003577;
   font-weight: bold;
@@ -109,8 +125,15 @@
   justify-content: center;
   padding: 5% 10%;
 }
+.titulo-ajudar{
+  color: #003577;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: left;
+  padding-bottom: 1rem;
+}
 .card-ajudar{
-  margin-right: 3%;
+  padding-bottom: 5%;
 }
 .card-body{
     background-color: #395EA6;
@@ -150,6 +173,8 @@
   background-color: #F5F5F5;
 }
 .card{
+  background-color: #F5F5F5;
+  border-radius: 15px;
   margin-bottom: 5%;
 }
 .noticias-titulo{
@@ -250,7 +275,6 @@
   font-size: 102%;
   text-decoration: underline;
 }
-
 .img-noticias{
   width: 75%;
 }
@@ -262,10 +286,11 @@
 .contato{
   background: url("../src/ornamentos_Grupo_Daniel.svg");
   background-color: #003577;
-  height: 442px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 442px;
+  padding: 5vh;
 }
 .titulo-contato{
   text-align: left;
@@ -283,7 +308,7 @@
   color: white;
 }
 #mce-FNAME{
-  width: 328px;
+  width: 100%;
   height: 35px;
   margin: 2.5% 0;
   border-radius: 5px;
@@ -295,7 +320,7 @@
   padding: 15px;
 }
 #mce-EMAIL{
-  width: 328px;
+  width: 100%;
   height: 35px;
   margin: 2.5% 0;
   border-radius: 5px;
@@ -307,7 +332,7 @@
   padding: 15px;
 }
 #mce-MMERGE2{
-  width: 328px;
+  width: 100%;
   height: 135px;
   margin: 2.5% 0;
   border-radius: 5px;
@@ -325,7 +350,7 @@
   border-radius: 5px;
   color: #00000098;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
   height: 36px;
 
 }
@@ -339,6 +364,13 @@
 }
 .sobre-direita{
   padding: 2.5%;
+}
+@media (max-width: 768px) {
+  .sobre-direita{
+    padding: 2.5%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .missao-left{
   padding-left: 0;
@@ -367,7 +399,7 @@
 }
 .footer-left{
   background-color: #003577;
-  padding: 2.5%;
+  padding: 5%;
 }
 .titulo-footer-left{
   color: white;
@@ -383,10 +415,9 @@
   width: 260px;
   height: 36px;
 }
-
 .footer-right{
   background-color: #6D8BD8;
-  padding: 5% 2.5%;
+  padding: 5%;
 }
 .link-footer{
   color: #000000;
