--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 }
 
 .navbar{
-  height: 60px;
   padding-right: 5%;
 }
 .navbar-brand{
@@ -17,7 +16,7 @@
 }
 .nav-item{
   text-align: center;
-  font:-size: 1rem;
+  font-size: 1rem;
   font-family: 'roboto';
   letter-spacing: 1.75px;
   text-transform: uppercase;
@@ -89,11 +88,19 @@
 }
 @media (max-width: 768px) {
   .banner{
+    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("../src/banner.png");
+    background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
     background-position-y: 0;
   }
   .banner-heading{
+    font-family: 'roboto';
   	font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 75px;
+    margin-bottom: 30px;
+  	color:#fff;
   }
 }
 
