--- a/css/style.css
+++ b/css/style.css
@@ -449,3 +449,26 @@
   color: #000000;
   font-family: 'roboto';
 }
+.paypal {
+  margin: 0 auto;
+  border-radius: 25px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  width: 50%;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.paypal > p {
+  font-size: 1.2rem;
+  font-weight: 700;
+  text-align: center;
+  /* width: 20%; */
+  margin-bottom: 20px;
+}
+a:link, a:hover, a:visited, a:active {
+  color: #fff;
+  text-decoration: none;
+}
