--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@
 .card{
   background-color: #F5F5F5;
   border-radius: 15px;
-  margin-bottom: 5%;
+  /* margin-bottom: 5%; */
 }
 .noticias-titulo{
   font-family: 'roboto';
@@ -409,7 +409,7 @@
   justify-content: center;
 }
 .footer-left{
-  background-color: #003577;
+  background-color: rgb(22, 175, 121);
   padding: 5%;
 }
 .titulo-footer-left{
@@ -432,7 +432,7 @@
   color: white !important;
 }
 .footer-right{
-  background-color: #6D8BD8;
+  background-color: #395EA6;
   padding: 5%;
 }
 .link-footer{
@@ -471,4 +471,13 @@
 a:link, a:hover, a:visited, a:active {
   color: #fff;
   text-decoration: none;
+}
+gd-centralizar {
+  display: flex;
+  margin: 0 auto;
+}
+gd-flex{
+  align-self: center;
+  display: flex;
+  width: max-content;
 }
